# bb-storage

./: go.mod  go.sum  go_dependencies.bzl
cmd/bb_replicator/: BUILD.bazel
cmd/bb_storage/: BUILD.bazel
internal/mock/: BUILD.bazel
patches/com_github_bazelbuild_remote_apis/: blake3.diff
pkg/blobstore/: BUILD.bazel  content_addressable_storage_blob_access.go  decomposing_blob_access.go  decomposing_blob_access_test.go
pkg/blobstore/buffer/: BUILD.bazel  buffer.go  cas_chunk_reader_buffer.go  cas_cloned_buffer.go  cas_concatenating_buffer.go  cas_error_handling_buffer.go  cas_reader_buffer.go  chunk_policy.go  common_conversions.go  concatenating_chunk_reader.go  concatenating_reader.go  error_buffer.go  error_handling_chunk_reader.go  example_test.go  new_ac_buffer_from_action_result_test.go  new_ac_buffer_from_byte_slice_test.go  new_buffer_from_error_test.go  new_cas_buffer_from_byte_slice_test.go  new_cas_buffer_from_chunk_reader_test.go  new_cas_buffer_from_reader_test.go  new_cas_concatenating_buffer_test.go  (+7 more)
pkg/builder/: demultiplexing_build_queue_test.go
pkg/cas/: byte_stream_server.go  content_addressable_storage_server_test.go
pkg/digest/: BUILD.bazel  blake3zcc_blob_hasher.go  blake3zcc_manifest.go  blake3zcc_manifest_hasher.go  blake3zcc_manifest_parser.go  blake3zcc_manifest_parser_test.go  digest.go  digest_test.go  manifest_parser.go
pkg/digest/blake3zcc/: BUILD.bazel  blake3.go  chaining_value_stack.go  chunk_parser.go  node.go
pkg/grpc/: BUILD.bazel  authenticator.go  jwt_authenticator.go  jwt_authenticator_test.go
tools/: container.bzl
(+2 files in other folders)
